# KnightWise

./: .env.example  .gitignore  .prettierignore  .tool-versions  LICENSE  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_onboarding.py
apps/api/knightwise_api/: __init__.py  cli.py  db.py  main.py  settings.py
apps/api/knightwise_api/content/: __init__.py  seed.py
apps/api/knightwise_api/drills/: __init__.py  srs.py
apps/api/knightwise_api/engine/: analysis.py  maia.py  pipeline.py  stockfish.py  tagger.py
apps/api/knightwise_api/ingest/: __init__.py  chesscom.py  lichess.py  service.py  types.py
apps/api/knightwise_api/llm/: __init__.py  router.py
apps/api/knightwise_api/models/: __init__.py  game.py  node.py  onboarding.py  progress.py  puzzle.py  user.py
apps/api/knightwise_api/onboarding/: __init__.py  glicko.py  seed.py  selector.py
apps/api/knightwise_api/progress/: __init__.py  stats.py
apps/api/tests/: conftest.py  test_analysis_pipeline.py  test_analyze_stub.py  test_content_seed.py  test_health.py  test_ingest_chesscom.py  test_ingest_lichess.py  test_ingest_service.py  test_llm_router.py  test_maia_adapter.py  test_multi_step_puzzles.py  test_onboarding_glicko.py  test_onboarding_router.py  test_progress.py  test_rating_history.py  test_routers_drills.py  test_routers_games.py  test_routers_warp.py  test_srs.py  test_sync.py  test_tagger.py  test_warp_composer.py
(+64 files in other folders)
