[project]
name = "knightwise-api"
version = "0.1.0"
description = "KnightWise FastAPI backend"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115.13,<0.116",
  "uvicorn[standard]>=0.32.0,<0.33",
  "sqlalchemy>=2.0.35,<3",
  "alembic>=1.13.3,<2",
  "python-chess>=1.999",
  "httpx>=0.27.2,<0.28",
  "pydantic-settings>=2.6.0,<3",
  "openai>=1.50.0,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3,<9",
  "pytest-asyncio>=0.24.0,<0.25",
  "ruff>=0.7.0,<0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["knightwise_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
